Bug 151987 - After deleting a sort list, the default sort lists are added again every time Calc starts
Summary: After deleting a sort list, the default sort lists are added again every time...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords: bibisected, bisected, regression
: 151576 152001 155657 (view as bug list)
Depends on:
Blocks: User-Profile Options-Dialog-Calc
  Show dependency treegraph
 
Reported: 2022-11-10 05:05 UTC by MARINA-SODA
Modified: 2023-07-23 08:57 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MARINA-SODA 2022-11-10 05:05:15 UTC
Description:
This phenomenon has appeared since the July 2022 update.
Here is my checked ver.
7.3 -> none
7.4.0.3 ->have
7.4.2.3 ->have
AND↓
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5a1f41a0d3aab15c113651f2edc9d4137ae99063
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Steps to Reproduce:
1.Start calc
2.Do Data>sort.
3.Open sorting option>sorting oreder
or
2.Open tool>option>LOC>order list

Actual Results:
default list1
default list2
default list3
default list1
default list2
default list3
(and more...)
my list1

See ->http://imepic.jp/20221017/107470

Expected Results:
default list1
default list2
default list3
my list1


Reproducible: Always


User Profile Reset: Yes

Additional Info:
The number of times the list grows seems to be random.
At 7.4.0.3  it seemed to proliferate with every start LOC.
Comment 1 stragu 2022-11-10 16:19:11 UTC
Hi Marina

I had a look in the options and only see 4 lists: 2 weekday lists, and 2 month lists.
Same thing in the Sort dialog, Options tab, Custom sort order dropdown: only 4 lists.

Starting again Calc does not duplicate the lists for me.

What are those "default lists" you have? Are they custom ones you have created? (Or maybe they are related to the Japanese UI?)
Have you tried using Calc in Safe Mode to see if the issue remains?

Thank you!

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0cf5141b2233611286a27930d8030c562eb0d84b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 stragu 2022-11-10 16:24:18 UTC
Instructions for Safe mode (and user profile reset if needed) are here: https://wiki.documentfoundation.org/UserProfile#Backup_first

If you reset your user profile, please make sure the information it contains is not important (or make a backup as described).
Comment 3 stragu 2022-11-11 08:48:36 UTC
*** Bug 152001 has been marked as a duplicate of this bug. ***
Comment 4 MARINA-SODA 2022-11-12 10:15:14 UTC
Hi.
 The Red box list is calc's default list.
 I tried safe mode, update, and install dev ver.

セーフモードも試した、全部削除もした、アップデートもした、それでも治らないからDevモードにインストールし直した。全部ダメなので報告しました。

おそらくこの問題を直すには、報告内に書いた「問題なかったバージョン」まで遡ってダウングレードが必要になると思う。
Comment 5 MARINA-SODA 2022-11-12 10:19:19 UTC
書いてなかった・・・
たしか6.3か6.4あたりまでは正常だった。

This "default" list is Japanese Calendar and days of the week list.

January、February、March....
Sunday、Monday....
Comment 6 stragu 2022-11-12 18:01:26 UTC
Thank you, Marina!

Also reproduced in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab4e40941e9ebae83f98ba918440b03eac5bdcaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Steps:

1) Delete a default list in Tools > Options > Calc > Sort lists
2) Close a reopen Calc, see sort lists

The full set of default lists is added in again.

Also in:

Version: 7.4.2.3 / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But works as expected in:

Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 7 MARINA-SODA 2022-11-13 05:33:28 UTC
Hi Stéphane.
Thanks to check many versions.

Both the current version and 7.5 have other fatal problems(reported by other members), so I will return to the version you told me for the time being.

Thanks.
Comment 8 raal 2022-11-13 19:02:46 UTC
Cannot bibisect, good in linux-64-7.3 master, bad in linux-64-7.4 oldest
Comment 9 stragu 2022-12-05 16:35:19 UTC
*** Bug 151576 has been marked as a duplicate of this bug. ***
Comment 10 stragu 2022-12-05 17:14:29 UTC
I had to reset the user profile at each step for bibisecting.
Bisected to:
 134d209cb8962a71d3420e0e50220cc476612f62 is the first bad commit
commit 134d209cb8962a71d3420e0e50220cc476612f62
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Nov 30 19:34:31 2021 +0100

    source 8810812e58f1b014d3156235c1ab5a2d6c73c828

 instdir/program/libsclo.so   | Bin 21523808 -> 21529408 bytes
 instdir/program/libscuilo.so | Bin 940184 -> 940184 bytes
 instdir/program/setuprc      |   2 +-
 instdir/program/versionrc    |   2 +-
 4 files changed, 2 insertions(+), 2 deletions(-)

Which points to:

commit 8810812e58f1b014d3156235c1ab5a2d6c73c828
author	Mike Kaganski <mike.kaganski@collabora.com>	Sun Nov 28 23:58:40 2021 +0200
committer	Mike Kaganski <mike.kaganski@collabora.com>	Mon Nov 29 03:54:26 2021 +0100
tree 14d7af8f7c402331e96b10b801fe9e6713b26a86
parent b2c56ac95b15b675b9fabed889e7f9709bdc793f

tdf#132145: Synchronize ScAppCfg with configuration

The commit modifies the file that contains the user sort lists: https://opengrok.libreoffice.org/xref/core/test/source/sheet/globalsheetsettings.cxx?r=27f98935#123

Can you please have a look, Mike? Thanks!
Comment 11 Mike Kaganski 2023-06-03 19:46:35 UTC
https://gerrit.libreoffice.org/c/core/+/152579
Comment 12 Commit Notification 2023-06-04 06:43:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e0c7d7bc511c90e820adaaebb14ca8175364371d

tdf#151987: clean default list before using non-default one

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Mike Kaganski 2023-06-04 06:47:12 UTC
*** Bug 155657 has been marked as a duplicate of this bug. ***
Comment 14 Commit Notification 2023-06-05 11:25:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/9f7e3560ba3ecdf52bc5b9637485fea57ae1b132

tdf#151987: clean default list before using non-default one

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 BogdanB 2023-06-05 15:18:01 UTC
Thanks, Mike.

Just once now.
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: e855481ead996a3b8270fae91bd23d6c8d75ef25
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 16 Elmar 2023-06-17 04:47:53 UTC
Verified
Comment 17 ady 2023-06-21 22:05:32 UTC
Still happening in current Dev versions 24.2.

Possibly some branch split happened during the push to 7.6?
Comment 18 ady 2023-06-21 22:30:16 UTC
(In reply to ady from comment #17)
> Still happening in current Dev versions 24.2.
> 
> Possibly some branch split happened during the push to 7.6?

No, sorry. Resetting everything and following steps from comment 6 > no longer repro.

Closing again.
Comment 19 MARINA-SODA 2023-07-15 10:17:44 UTC
7.5.4.2 has this probrem.
NOT SOLVED.
Comment 20 ady 2023-07-15 15:05:32 UTC
(In reply to MARINA-SODA from comment #19)
> 7.5.4.2 has this probrem.
> NOT SOLVED.

Please read comment 14: "It will be available in 7.5.5."
Comment 21 MARINA-SODA 2023-07-23 08:57:24 UTC
Sorry Thanks