tdf#151987: clean default list before using non-default one

This restores the code that I had dropped inexplicably in commit
8810812e58f1b014d3156235c1ab5a2d6c73c828 (tdf#132145: Synchronize
ScAppCfg with configuration, 2021-11-29).

Change-Id: Ie0215c9296d9cf9fcd75ed5b08218af9900eadb5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152579
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e0c7d7bc511c90e820adaaebb14ca8175364371d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152545
Reviewed-by: Eike Rathke <erack@redhat.com>